completed placement of containers in section one of landing page added hero-container and hero-container2 to correctly align hero content separated header from hero-section, header and hero-section were initially one container

--- a/style.css
+++ b/style.css
@@ -9,14 +9,60 @@ body {
     flex-direction: column;
 }
 
+.section-one {
+    background-color: #1F2937;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    padding: 25px 225px;
+
+}
+
 .header {
     font-size: 24px;
     font-weight: extra-bold;
     color: #F9FAF8;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    
+}
+
+.hero-section{
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    padding: 24px;
+    flex: 1;
+}
+
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+    flex: 1;
+    max-width: 350px;
+    gap: 10px;
+    
+}
+
+.hero-main {
+    font-size: 48px;
+    font-weight: extra-bold;
+    color: #F9FAF8;
+    display: flex;
+}
+
+.hero-secondary {
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+    color:#E5E7EB;
+    gap: 10px
+}
+
+.hero-container2 {
+    display: flex;
+    
 }
 
 ul {
@@ -31,9 +77,5 @@ a {
     color: #E5E7EB;
     font-size: 18px;
     text-decoration: none;
-}
-
-.section-one {
-    background-color: #1F2937;
 }
 
